# Citadel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Citadel.sln  CitadelConfig.h.in  GLFWpremake5.lua  ImGuipremake5.lua  README.md  SetUp.bat  SetUp.sh  dependencies.lua  premake5.lua
BulletFarm/: CMakeLists.txt  premake5.lua
BulletFarm/src/: BFMacros.h  BulletFarm.cpp  BulletFarm.h  CoreMinimal.h  bfpch.cpp  bfpch.h
BulletFarm/src/BulletFarm/: PrimitiveTypes.h
BulletFarm/src/BulletFarm/Json/: JsonManager.cpp  JsonManager.h
BulletFarm/src/BulletFarm/JsonParser/: JsonParser.cpp  JsonParser.h
BulletFarm/src/BulletFarm/Reflection/: ReflectionConcepts.h  ReflectionMacros.h  ReflectionType.h
BulletFarm/src/BulletFarm/ServiceLocator/: ServiceLocator.cpp  ServiceLocator.h
BulletFarm/src/BulletFarm/Singleton/: Singleton.cpp  Singleton.h  SingletonInitializer.cpp  SingletonInitializer.h  SingletonManager.cpp  SingletonManager.h
Citadel/: CMakeLists.txt  Citadel.vcxproj  Citadel.vcxproj.filters  premake5.lua
Citadel/src/: App.cpp  Test_glm.h
Citadel/src/Test/: CitadelTestLayer.cpp  CitadelTestLayer.h  Test_glm.cpp  Test_glm.h
Scripts/: GLFWpremake5.lua  ImGuiDockingpremake5.lua  ImGuipremake5.lua
UnitTest/: CMakeLists.txt  ServiceLocatorTest.cpp  ServiceLocatorTest.h  premake5.lua
UnitTest/src/: UnitTest.cpp  utpch.cpp  utpch.h
UnitTest/src/BulletFarm/: ReflectionTest.cpp  ReflectionTest.h  SingletonTest.cpp  SingletonTest.h
V8Engine/: CmakeLists.txt  V8Engine.vcxproj  V8Engine.vcxproj.filters  premake5.lua
V8Engine/src/: Test.cpp  Test.h  V8Engine.h  v8pch.cpp  v8pch.h
V8Engine/src/Platform/: IDebug.cpp  IDebug.h  PlatformInclude.cpp  PlatformInclude.h  ServiceLocatorHelper.cpp  ServiceLocatorHelper.h
V8Engine/src/Platform/Mac/: MacDebug.cpp  MacDebug.h  MacWindow.cpp  MacWindow.h
V8Engine/src/Platform/Mac/include/: MacInclude.cpp  MacInclude.h
V8Engine/src/Platform/OpenGL/: ImGuiOpenGLRenderer.cpp  ImGuiOpenGLRenderer.h  OpenGLContext.cpp  OpenGLContext.h  imgui_demo.cpp  imgui_impl_opengl3.cpp
V8Engine/src/Platform/Windows/: WindowsDebug.cpp  WindowsDebug.h  WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
V8Engine/src/Platform/Windows/include/: WindowsInclude.cpp  WindowsInclude.h
V8Engine/src/V8/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h  Type.h  Window.h
V8Engine/src/V8/Core/: Core.h  EntryPoint.h  Input.h  Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h  Types.h  Window.h
V8Engine/src/V8/Events/: ApplicationEvent.h  Event.cpp  Event.h  KeyEvent.h  MouseEvent.h
V8Engine/src/V8/Events/Codes/: CommonCodeCore.cpp  CommonCodeCore.h  KeyCode.cpp  KeyCode.h  MouseCode.cpp  MouseCode.h
V8Engine/src/V8/GUI/: ImGuiBuild.cpp  ImGuiHeader.cpp  ImGuiLayer.cpp  ImGuiLayer.h
V8Engine/src/V8/Renderer/: GraphicsContext.h  IGraphicsContext.h  IShader.cpp  IShader.h  Shader.cpp  Shader.h
V8Engine/src/V8/Utils/: Log.cpp  Log.h
bin-int/Debug-x64/Citadel/: Citadel.exe.recipe  vc143.idb
bin-int/Debug-x64/Citadel/Citadel.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Citadel.lastbuildstate  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
bin-int/Debug-x64/V8Engine/: V8Engine.dll.recipe  vc143.idb
bin-int/Debug-x64/V8Engine/V8Engine.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
